# chess-puzzle-agent

./: .gitignore  README.md  justfile  main.py  pyproject.toml  random_check_player.py  test_random_check_hypothesis.py  web_ui.py
scripts/: download_puzzle.py
src/: players.py  prompts.py  tools.py
src/chess_puzzle_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: chess.css
static/js/: chess.js
templates/: chess.html
